Don't reconfigure the encoder if the video options aren't changing.

Review URL: https://codereview.webrtc.org/1840043005

Cr-Commit-Position: refs/heads/master@{#12222}
(cherry picked from commit 8ef0c11d69e94c9ebc39f30cf6702c38285ca1ca)

BUG=chromium:598928
R=pbos@webrtc.org

Review URL: https://codereview.webrtc.org/1870283002 .

Cr-Commit-Position: refs/branch-heads/50@{#8}
Cr-Branched-From: a5d8e4eef58574ddb4c4c818de71491a52887f45-refs/heads/master@{#11765}